<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<group android:checkableBehavior="single">
    <item
    android:id="@+id/home"
    android:title="@string/home"
    android:icon="@drawable/ic_home"/>
    <item
        android:id="@+id/myProflie"
        android:title="@string/my_profile"
        android:icon="@drawable/ic_name_person"/>
    <item
        android:id="@+id/favouriteRestaurants"
        android:title="@string/favourite_restaurants"
        android:icon="@drawable/ic_favorite_restaurants"/>
    <item
        android:id="@+id/orderHistory"
        android:title="@string/order_history"
        android:icon="@drawable/ic_order_history"/>
    <item
        android:id="@+id/coronaPrecautions"
        android:title="@string/corona_precautions"
        android:icon="@drawable/ic_precaution"/>
    <item
        android:id="@+id/qna"
        android:title="@string/faqs"
        android:icon="@drawable/ic_faqs"/>
    <item
        android:id="@+id/logOut"
        android:title="@string/log_out"
        android:icon="@drawable/ic_log_out"/>
</group>
</menu>