<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity"
    android:background="@drawable/reesiii">
    <ImageView
        android:id="@+id/imgLogoHungryFoods"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_hungry_foods"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"/>
    <EditText
        android:id="@+id/etEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="80dp"
        android:textColor="#FF6600"
        android:layout_below="@id/imgLogoHungryFoods"
        android:background="@drawable/customize_background_edit_text_login"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_id"
        android:drawablePadding="6dp"
        android:maxLines="1"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/colorPrimary"
        android:layout_marginTop="20dp"
        android:textColor="#FF6600"
        android:layout_below="@id/etEmailId"
        android:background="@drawable/customize_background_edit_text_login"
        android:padding="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
       android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="6dp"
        android:maxLines="1" />
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="40dp"
        android:background="@drawable/customize_background_buttons_login"
        android:text="@string/login"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="426dp"
        android:layout_height="33dp"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="9dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:backgroundTint="@color/colorPrimaryDark"/>

    <TextView
        android:id="@+id/txtRegisterNow"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_below="@id/txtForgotPassword"
        android:layout_marginTop="150dp"
        android:gravity="center"
        android:text="@string/don_t_have_a_account_sign_up_now"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="16.5sp"
        android:textStyle="bold"
        android:layout_marginLeft="33dp"/>

</RelativeLayout>
