<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        android:id="@+id/toolbar"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_scrollFlags="scroll|enterAlways"
        />
    <ImageView
        android:id="@+id/imgLogoHungryFoods"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_hungry_foods"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        />

    <EditText
        android:layout_below="@id/imgLogoHungryFoods"
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/customize_background_fogot_password_edit_text"
        android:hint="@string/name_min_4_characters"
        android:layout_marginTop="35dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:drawableStart="@drawable/ic_name_person"/>
    <EditText
        android:id="@+id/etEmailId"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/customize_background_fogot_password_edit_text"
        android:layout_below="@id/etName"
        android:hint="@string/email_address"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_email_id"
        />
    <EditText
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/customize_background_fogot_password_edit_text"
        android:layout_below="@id/etEmailId"
        android:hint="@string/mobile_number_10_digits"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="phone"
        android:maxLength="10"
        android:drawableStart="@drawable/ic_mobile_number"/>
    <EditText
        android:id="@+id/etDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/customize_background_fogot_password_edit_text"
        android:layout_below="@id/etMobileNumber"
        android:hint="@string/delivery_address"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="textPostalAddress"
        android:drawableStart="@drawable/ic_delivery_address" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/customize_background_fogot_password_edit_text"
        android:layout_below="@id/etDeliveryAddress"
        android:hint="@string/password_min_6_characters"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        />
    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/customize_background_fogot_password_edit_text"
        android:layout_below="@id/etPassword"
        android:hint="@string/confirm_password"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:maxLines="1"
        android:inputType="textPassword"
        android:drawableStart="@drawable/ic_password"
        />
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/etConfirmPassword"
        android:layout_marginTop="35dp"
        android:layout_marginStart="59dp"
        android:background="@drawable/customizable_background_button_forgot_password"
        android:text="NEXT"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        android:textSize="20sp"/>


</RelativeLayout>
